--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card card-body">
-                        <form action="/add" method="post">
+                        <form action="/add" autocomplete="off" method="post">
                             <div class="form-row">
                                 <div class="col-md-6 form-group">
                                     <label for="username">Username</label>
@@ -91,7 +91,7 @@
                 <div>
                     <div class="row justify-content-center my-2" id="result"></div>
                 </div>
-                <div id="Map"></div>
+                <div id="map"></div>
             </div>
         </div>
     </div>
