--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,18 @@
                     <%= title %>
                 </h2>
             </div>
-            <h2 class="display-1">Student</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2>
+                            Student
+                        </h2>
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Data</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     </body>
