--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <h2>
-                            Student
-                        </h2>
+                        <form action="" method="get">
+                            <input type="search" placeholder="Search..." name="search" id="search" class="form-control">
+                        </form>
                     </div>
                     <div class="col-md-8">
                         <h3>Data</h3>
