UI init part two fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,13 +14,13 @@
                         </form>
                         <ul class="list-group my-3">
                             <li class="list-group-item list-group-item-action">
-                                <a href="/">Username</a>
+                                <a href="/">Student Events</a>
                             </li>
                             <li class="list-group-item list-group-item-action">
-                                <a href="/">Classe</a>
+                                <a href="/">MarkSheet</a>
                             </li>
                             <li class="list-group-item list-group-item-action">
-                                <a href="/">Guide</a>
+                                <a href="/">Attendance</a>
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 <a href="/">Register</a>
