--- a/views/student.ejs
+++ b/views/student.ejs
@@ -8,83 +8,95 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card card-body">
-                        <form action="/add" autocomplete="off" method="post">
-                            <div class="form-row">
-                                <div class="col-md-6 form-group">
-                                    <label for="username">Username</label>
-                                    <input type="text" name="username" id="username" value="" placeholder="Username"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label for="fullname">fullname</label>
-                                    <input type="text" name="fullname" id="fullname" value="" placeholder="fullname"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-12 form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" name="email" id="email" value="" placeholder="email"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label for="pass">Password</label>
-                                    <input type="password" name="password" id="pass" value="" placeholder="Password"
-                                        class="form-control">
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label for="pass2">Confirm Password</label>
-                                    <input type="password" name="password2" id="pass2" value="" placeholder="Password"
-                                        class="form-control">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-sm btn-success">Register</button>
-                            </div>
-                        </form>
-                    </div>
+                    <%- include('./includes/menu') %>
                 </div>
                 <div class="col-md-8">
-                    <div class="alert alert-danger">
-                        <form action="" method="get" class="inline-group">
-                            <input type="search" onkeyup="mySearch()" name="search" spellcheck="false" id="search"
-                                placeholder="Search..." class="my-2 form-control">
-                        </form>
-                    </div>
-                    <div id="search"></div>
-                    <div class="card card-body">
-                        <table class="table table-sm table-responsive-sm table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Username</th>
-                                    <th>Fullname</th>
-                                    <th>Email</th>
-                                    <th>Events</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% users.forEach(function(u){%>
-                                    <tr>
-                                        <td>
-                                            <%= u.username %>
-                                        </td>
-                                        <td>
-                                            <%= u.fullname %>
-                                        </td>
-                                        <td>
-                                            <%= u.email %>
-                                        </td>
-                                        <td>
-                                            <div class="btn-group btn-sm-responsive">
-                                                <a href="/get/<%= u._id %>" class="btn btn-sm btn-info">edit</a>
-                                                <a href="/delete/<%= u._id %>" class="btn btn-sm btn-danger">delete</a>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card card-body">
+                                    <form action="/add" autocomplete="off" method="post">
+                                        <div class="form-row">
+                                            <div class="col-md-6 form-group">
+                                                <label for="username">Username</label>
+                                                <input type="text" name="username" id="username" value=""
+                                                    placeholder="Username" class="form-control">
                                             </div>
-                                        </td>
-                                    </tr>
-                                    <%})%>
-                            </tbody>
-                        </table>
+                                            <div class="col-md-6 form-group">
+                                                <label for="fullname">fullname</label>
+                                                <input type="text" name="fullname" id="fullname" value=""
+                                                    placeholder="fullname" class="form-control">
+                                            </div>
+                                            <div class="col-md-12 form-group">
+                                                <label for="email">Email</label>
+                                                <input type="email" name="email" id="email" value="" placeholder="email"
+                                                    class="form-control">
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                <label for="pass">Password</label>
+                                                <input type="password" name="password" id="pass" value=""
+                                                    placeholder="Password" class="form-control">
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                <label for="pass2">Confirm Password</label>
+                                                <input type="password" name="password2" id="pass2" value=""
+                                                    placeholder="Password" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-sm btn-success">Register</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="alert alert-danger">
+                                    <form action="" method="get" class="inline-group">
+                                        <input type="search" onkeyup="mySearch()" name="search" spellcheck="false"
+                                            id="search" placeholder="Search..." class="my-2 form-control">
+                                    </form>
+                                </div>
+                                <div id="search"></div>
+                                <div class="card card-body">
+                                    <table class="table table-sm table-responsive-sm table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th>Username</th>
+                                                <th>Fullname</th>
+                                                <th>Email</th>
+                                                <th>Events</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <% users.forEach(function(u){%>
+                                                <tr>
+                                                    <td>
+                                                        <%= u.username %>
+                                                    </td>
+                                                    <td>
+                                                        <%= u.fullname %>
+                                                    </td>
+                                                    <td>
+                                                        <%= u.email %>
+                                                    </td>
+                                                    <td>
+                                                        <div class="btn-group btn-sm-responsive">
+                                                            <a href="/get/<%= u._id %>"
+                                                                class="btn btn-sm btn-info">edit</a>
+                                                            <a href="/delete/<%= u._id %>"
+                                                                class="btn btn-sm btn-danger">delete</a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <%})%>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <span class="badge badge-success">Student: <%= users.length %></span>
+                            </div>
+                        </div>
                     </div>
-                    <span class="badge badge-success">Student: <%= users.length %></span>
+
                 </div>
             </div>
             <div class="container-fluid p-0">
