--- a/views/student.ejs
+++ b/views/student.ejs
@@ -13,43 +13,7 @@
                 <div class="col-md-8">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">
-                                <div class="card card-body">
-                                    <form action="/add" autocomplete="off" method="post">
-                                        <div class="form-row">
-                                            <div class="col-md-6 form-group">
-                                                <label for="username">Username</label>
-                                                <input type="text" name="username" id="username" value=""
-                                                    placeholder="Username" class="form-control">
-                                            </div>
-                                            <div class="col-md-6 form-group">
-                                                <label for="fullname">fullname</label>
-                                                <input type="text" name="fullname" id="fullname" value=""
-                                                    placeholder="fullname" class="form-control">
-                                            </div>
-                                            <div class="col-md-12 form-group">
-                                                <label for="email">Email</label>
-                                                <input type="email" name="email" id="email" value="" placeholder="email"
-                                                    class="form-control">
-                                            </div>
-                                            <div class="col-md-6 form-group">
-                                                <label for="pass">Password</label>
-                                                <input type="password" name="password" id="pass" value=""
-                                                    placeholder="Password" class="form-control">
-                                            </div>
-                                            <div class="col-md-6 form-group">
-                                                <label for="pass2">Confirm Password</label>
-                                                <input type="password" name="password2" id="pass2" value=""
-                                                    placeholder="Password" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <button type="submit" class="btn btn-sm btn-success">Register</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                            <div class="col-md-8">
+                            <div class="col-md-12">
                                 <div class="alert alert-danger">
                                     <form action="" method="get" class="inline-group">
                                         <input type="search" onkeyup="mySearch()" name="search" spellcheck="false"
@@ -58,6 +22,7 @@
                                 </div>
                                 <div id="search"></div>
                                 <div class="card card-body">
+                                    <a href="/register" class="btn my-2 btn-sm btn-success">Register</a>
                                     <table class="table table-sm table-responsive-sm table-striped">
                                         <thead>
                                             <tr>
