--- a/views/includes/menu.ejs
+++ b/views/includes/menu.ejs
@@ -1,5 +1,8 @@
 <ul class="list-group my-3">
     <li class="list-group-item list-group-item-action">
+        <a href="/">Dashboard</a>
+    </li>
+    <li class="list-group-item list-group-item-action">
         <a href="/student">Student Events</a>
     </li>
     <li class="list-group-item list-group-item-action">
