--- a/views/student.ejs
+++ b/views/student.ejs
@@ -22,7 +22,7 @@
                                 </div>
                                 <div id="search"></div>
                                 <div class="card card-body">
-                                    <a href="/register" class="btn my-2 btn-sm btn-success">Register</a>
+                                    <a href="/student/register" class="btn my-2 btn-sm btn-success">Register</a>
                                     <table class="table table-sm table-responsive-sm table-striped">
                                         <thead>
                                             <tr>
