--- a/views/includes/registration.ejs
+++ b/views/includes/registration.ejs
@@ -10,14 +10,14 @@
         </div>
         <div class="col-md-4 form-group">
             <label for="class">class</label>
-            <select name="class" id="class" class="form-control">
+            <select name="Classe" id="class" class="form-control">
                 <option value="">-- Select --</option>
-                <option value="P1">1<sup>er</sup>Primaire</option>
-                <option value="P2">2<sup>e</sup>Primaire</option>
-                <option value="P3">3<sup>e</sup>Primaire</option>
-                <option value="P4">4<sup>e</sup>Primaire</option>
-                <option value="P5">5<sup>e</sup>Primaire</option>
-                <option value="P6">6<sup>e</sup>Primaire</option>
+                <option value="P1">1<sup>er</sup> Primaire</option>
+                <option value="P2">2<sup>e</sup> Primaire</option>
+                <option value="P3">3<sup>e</sup> Primaire</option>
+                <option value="P4">4<sup>e</sup> Primaire</option>
+                <option value="P5">5<sup>e</sup> Primaire</option>
+                <option value="P6">6<sup>e</sup> Primaire</option>
             </select>
         </div>
         <div class="col-md-12 form-group">
