--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,34 +1,6 @@
 <%- include ('./includes/header') %>
-    <div class="container-fluid p-0">
-        <div class="container">
-            <div class="mt-2 alert alert-success">
-                <h2 class="text-center">
-                    <%= title %>
-                </h2>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <form action="" method="get">
-                            <input type="search" placeholder="Search..." name="search" id="search" class="form-control">
-                        </form>
-                        <%- include('./includes/menu') %>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card">
-                            <div class="card-body">
-                                <%- include('./includes/registration') %>
-                            </div>
-                            <div class="card-footer">
-                                <a href="/student" class="close">Back</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="container">
+        <h3 class="display-2">Register</h3>
     </div>
-    </body>
-
 
     </html>
