--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,23 +4,30 @@
   <div class="row py-5">
     <div class="col-md-4 sidebar">
       <div class="list-group">
-        <div class="list-group-item d-flex align-items-center">Dashboard</div>
+        <a href="/" class="list-group-item d-flex align-items-center"
+          >Dashboard</a
+        >
+        <a href="/register" class="list-group-item d-flex align-items-center"
+          >Registration</a
+        >
+        <a href="/aboutus" class="list-group-item d-flex align-items-center"
+          >About Us</a
+        >
       </div>
     </div>
     <div class="col-md-8 sidebar">
-      <div id="results">Loading...</div>
+      <div id="results"></div>
     </div>
   </div>
 </div>
 
 <script>
+  const results = document.getElementById("results");
   fetch("http://localhost:7000/students")
     .then((res) =>
       res.json().then((data) => {
         data.forEach((student) => {
-          document.getElementById(
-            "results"
-          ).innerHTML += `<div class="card card-body my-1 shadow-sm">
+          results.innerHTML += `<div class="card card-body my-1 shadow-sm">
                   <a href="students/${student._id}" class="d-flex justify-content-between align-items-center">
                     <div>
                       <span>${student.username}</span> |
